Fix panning on mobile devices

--- a/src/FestivalPOS/src/styles.css
+++ b/src/FestivalPOS/src/styles.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 body {
     /* Disables pull-to-refresh but allows overscroll glow effects */
     overscroll-behavior-y: contain;
